Cập nhật chức năng sản phẩm